add: cloudpanel access doc

--- a/layouts/shortcodes/callout.html
+++ b/layouts/shortcodes/callout.html
@@ -1,4 +1,4 @@
-{{- $calloutEmojiDict := dict "info" "" "warning" "⚠️" "error" "🚫" -}}
+{{- $calloutEmojiDict := dict "info" "👉🏼" "warning" "⚠️" "error" "🚫" -}}
 {{- $type := .Get "type" | default "default" -}}
 {{/* If emoji is not set, use the emoji from dict */}}
 {{- $emoji := .Get "emoji" -}}
