add: move to 404 error (gif)

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh;">
     <img
-        src="/img/cdc-illustration-erreur-404.png"
+        src="/img/cdc-illustration-erreur-404.gif"
         alt=""
         id="error-heading"
         width="600"
