--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,6 +9,7 @@
 h1, h2, h3, h4, h5, h6,
 .hextra-content h1{
   font-family: 'Bricolage Grotesque', sans-serif !important;
+  color: #263238 !important;
 }
 .hextra-content h2 {
   font-family: 'Bricolage Grotesque', sans-serif !important;
