--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,5 +28,6 @@
       {{ partial "footer.html" . }}
     {{ end }}
     {{ partial "scripts.html" . }}
+    {{- partial "chatbot.html" . -}}
   </body>
 </html>
